<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.tavares.kaique.jokenpo_nac.GameActivity">

    <TextView
        android:id="@+id/tvOpcoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opcoes"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivPedra"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/pedra" />

        <ImageView
            android:id="@+id/ivPapel"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/papel" />

        <ImageView
            android:id="@+id/ivTesoura"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/tesoura" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ultimaJogada"
        android:textSize="24sp"
        android:id="@+id/tvUltimaJogada"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.5"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jogadaPlayer"
            android:id="@+id/tvPlayer"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ivResultadoPlayer"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jogadaPC"
                android:id="@+id/tvAndroid"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/ivResultadoPC"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="24sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venceu"
        android:textSize="24sp"
        android:id="@+id/tvResultado"/>

</LinearLayout>
